; ModuleID = '/home/carl/AnghaBench/skynet/lualib-src/extr_lua-crypt.c_des_crypt.c'
source_filename = "/home/carl/AnghaBench/skynet/lualib-src/extr_lua-crypt.c_des_crypt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32*, i32*)* @des_crypt to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @des_crypt(i32* %0, i32* %1, i32* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32* %2, i32** %6, align 8
  %10 = load i32, i32* %7, align 4
  %11 = load i32*, i32** %5, align 8
  %12 = call i32 @GET_UINT32(i32 %10, i32* %11, i32 0)
  %13 = load i32, i32* %8, align 4
  %14 = load i32*, i32** %5, align 8
  %15 = call i32 @GET_UINT32(i32 %13, i32* %14, i32 4)
  %16 = load i32, i32* %7, align 4
  %17 = load i32, i32* %8, align 4
  %18 = call i32 @DES_IP(i32 %16, i32 %17)
  %19 = load i32, i32* %8, align 4
  %20 = load i32, i32* %7, align 4
  %21 = call i32 @DES_ROUND(i32 %19, i32 %20)
  %22 = load i32, i32* %7, align 4
  %23 = load i32, i32* %8, align 4
  %24 = call i32 @DES_ROUND(i32 %22, i32 %23)
  %25 = load i32, i32* %8, align 4
  %26 = load i32, i32* %7, align 4
  %27 = call i32 @DES_ROUND(i32 %25, i32 %26)
  %28 = load i32, i32* %7, align 4
  %29 = load i32, i32* %8, align 4
  %30 = call i32 @DES_ROUND(i32 %28, i32 %29)
  %31 = load i32, i32* %8, align 4
  %32 = load i32, i32* %7, align 4
  %33 = call i32 @DES_ROUND(i32 %31, i32 %32)
  %34 = load i32, i32* %7, align 4
  %35 = load i32, i32* %8, align 4
  %36 = call i32 @DES_ROUND(i32 %34, i32 %35)
  %37 = load i32, i32* %8, align 4
  %38 = load i32, i32* %7, align 4
  %39 = call i32 @DES_ROUND(i32 %37, i32 %38)
  %40 = load i32, i32* %7, align 4
  %41 = load i32, i32* %8, align 4
  %42 = call i32 @DES_ROUND(i32 %40, i32 %41)
  %43 = load i32, i32* %8, align 4
  %44 = load i32, i32* %7, align 4
  %45 = call i32 @DES_ROUND(i32 %43, i32 %44)
  %46 = load i32, i32* %7, align 4
  %47 = load i32, i32* %8, align 4
  %48 = call i32 @DES_ROUND(i32 %46, i32 %47)
  %49 = load i32, i32* %8, align 4
  %50 = load i32, i32* %7, align 4
  %51 = call i32 @DES_ROUND(i32 %49, i32 %50)
  %52 = load i32, i32* %7, align 4
  %53 = load i32, i32* %8, align 4
  %54 = call i32 @DES_ROUND(i32 %52, i32 %53)
  %55 = load i32, i32* %8, align 4
  %56 = load i32, i32* %7, align 4
  %57 = call i32 @DES_ROUND(i32 %55, i32 %56)
  %58 = load i32, i32* %7, align 4
  %59 = load i32, i32* %8, align 4
  %60 = call i32 @DES_ROUND(i32 %58, i32 %59)
  %61 = load i32, i32* %8, align 4
  %62 = load i32, i32* %7, align 4
  %63 = call i32 @DES_ROUND(i32 %61, i32 %62)
  %64 = load i32, i32* %7, align 4
  %65 = load i32, i32* %8, align 4
  %66 = call i32 @DES_ROUND(i32 %64, i32 %65)
  %67 = load i32, i32* %8, align 4
  %68 = load i32, i32* %7, align 4
  %69 = call i32 @DES_FP(i32 %67, i32 %68)
  %70 = load i32, i32* %8, align 4
  %71 = load i32*, i32** %6, align 8
  %72 = call i32 @PUT_UINT32(i32 %70, i32* %71, i32 0)
  %73 = load i32, i32* %7, align 4
  %74 = load i32*, i32** %6, align 8
  %75 = call i32 @PUT_UINT32(i32 %73, i32* %74, i32 4)
  ret void
}

declare dso_local i32 @GET_UINT32(i32, i32*, i32) #1

declare dso_local i32 @DES_IP(i32, i32) #1

declare dso_local i32 @DES_ROUND(i32, i32) #1

declare dso_local i32 @DES_FP(i32, i32) #1

declare dso_local i32 @PUT_UINT32(i32, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
